
ADDONS:
	- Fixed: Roundcube|PhpMyAdmin - Ensure that database tables exist (recovery case)

ENGINE:
	- Changed: The event listeners are now persistent. This allow to avoid self-registering
	- Fixed: Removed useless file tests on directory deletion
	- Fixed: External command died with signal 9 (without core dump)
	- Fixed: When using pkill, the pattern should match against the full command line
	- Updated: Plugin API to version 0.2.1

GUI:
	- Added: quoteValue() function, which allow to quote string for use in SQL statements
	- Updated: Plugin API to version 0.2.1

SETUP:
	- Fixed: Composer process timeout must be increased for slow connections

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.7
------------------------------------------------------------------------------------------------------------------------

2013-11-21: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.7

CONFIG:
	- Added: Vagrantfile allowing to setup a virtual machine using Vagrant
	- Removed: DATABASE_UTF8 parameter

DOCS:
	- Fixed: Updated preseed template file

ENGINE:
	- Fixed: imscp-del-tmp script is broken (Undefined subroutine floor...)
	- Fixed: Plugin (backend part) must be re-installed if missing
	- Fixed: Plugin (backend part) must be removed on compile time error
	- Fixed: Plugin (backend part) must be removed when a plugin is being deactivated
	- Fixed: Quota script is broken (A critical error has been encountered while executing function main::quotaSql...)
	- Removed: iMSCP::Database::mysql::Result

GUI:
	- Added: onBeforeSendCircular and onAfterSendCircular events
	- Added: Spam Filter option which allow to keep postfix configuration (external mail server interface)
	- Changed: EventsManager - listener stack become a priority queue (Performance issues)
	- Fixed: Configuration variable `/var/log/rkhunter.log` is missing
	- Fixed: Set internal encoding to UTF-8