@@ -313,6 +313,7 @@ CMD_ECHO = /bin/echo
 CMD_EGREP = /bin/egrep
 CMD_GPASSWD = /usr/bin/gpasswd
 CMD_GREP = /bin/grep
+CMD_GROUPMOD = /usr/sbin/groupmod
 CMD_GROUPADD = /usr/sbin/groupadd
 CMD_GROUPDEL = /usr/sbin/groupdel
 CMD_GZCAT = /bin/zcat
